@@ -1,8 +1,6 @@
 package ru.sbrf.sidec.integration;
 
-import com.fasterxml.jackson.databind.ObjectMapper;
 import org.junit.jupiter.api.AfterEach;
-import org.junit.jupiter.api.Order;
 import org.junit.jupiter.api.extension.ExtendWith;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.boot.autoconfigure.security.servlet.SecurityAutoConfiguration;
@@ -11,13 +9,16 @@ import org.springframework.http.MediaType;
 import org.springframework.test.annotation.DirtiesContext;
 import org.springframework.test.context.ContextConfiguration;
 import org.junit.jupiter.api.Test;
+import org.springframework.test.context.TestPropertySource;
 import org.springframework.test.context.junit.jupiter.SpringExtension;
 import org.springframework.test.web.servlet.MockMvc;
 import ru.sbrf.sidec.autoconfigure.SwitchoverAutoConfiguration;
 import ru.sbrf.sidec.config.SwitchoverConfig;
 import ru.sbrf.sidec.config.SwitchoverDataSourceConfiguration;
 import ru.sbrf.sidec.config.SwitchoverKafkaConfig;
+import ru.sbrf.sidec.helper.SignalBarrierService;
 import ru.sbrf.sidec.controller.SwitchoverSignalController;
+import ru.sbrf.sidec.db.ConnectionMode;
 import ru.sbrf.sidec.kafka.domain.SwitchoverRequest;
 import ru.sbrf.sidec.extension.KafkaExtension;
 import ru.sbrf.sidec.kafka.domain.SignalMode;
@@ -41,6 +42,7 @@ import static ru.sbrf.sidec.utils.AwaitilityUtil.defaultAwait;
 import static ru.sbrf.sidec.utils.KafkaUtil.clearConsumerGroups;
 import static ru.sbrf.sidec.utils.TestKafkaConsumer.getKafkaData;
 import static ru.sbrf.sidec.utils.TestKafkaConsumer.initKafkaConsumer;
+import static ru.sbrf.sidec.utils.TestKafkaConsumer.stopConsumers;
 
 @ContextConfiguration(classes = {
         SwitchoverAutoConfiguration.class,
@@ -48,13 +50,14 @@ import static ru.sbrf.sidec.utils.TestKafkaConsumer.initKafkaConsumer;
         SwitchoverDataSourceConfiguration.class,
         SwitchoverKafkaConfig.class,
         SwitchoverSignalController.class,
+        SignalBarrierService.class,
         RetryProperties.class,
         RetryService.class
 })
 @ExtendWith({KafkaExtension.class, SpringExtension.class})
 @WebMvcTest(value = SwitchoverSignalController.class, excludeAutoConfiguration = SecurityAutoConfiguration.class)
-@Order(20)
 @DirtiesContext(classMode = DirtiesContext.ClassMode.AFTER_EACH_TEST_METHOD)
+@TestPropertySource(properties = {"spring.test.context.cache.maxSize=0"})
 public class SidecStarterControllerIntegrationTest {
     @Autowired
     private MockMvc mockMvc;
@@ -63,10 +66,13 @@ public class SidecStarterControllerIntegrationTest {
     public void clean_up() {
         KafkaUtil.deleteKafkaTopics();
         clearConsumerGroups();
+        stopConsumers();
     }
 
     @Autowired
     private SwitchoverConfig config;
+    @Autowired
+    private SignalBarrierService barrierService;
 
     @Test
     public void controller_successfully_process_signal() throws Exception {
@@ -87,7 +93,7 @@ public class SidecStarterControllerIntegrationTest {
                 )
                 .andExpect(status().isOk());
         defaultAwait().until(() -> !getKafkaData(config.getSignalTopic()).isEmpty());
-        SignalResponse signal = OBJECT_MAPPER.readValue(getKafkaData(config.getSignalTopic()).get(0), SignalResponse.class);
+        SignalResponse signal = OBJECT_MAPPER.readValue(getKafkaData(config.getSignalTopic()).getFirst(), SignalResponse.class);
         assertAll(() -> {
             assertEquals(request.getUid(), signal.getUid());
             assertEquals(request.getAuthor(), signal.getAuthor());
@@ -96,5 +102,25 @@ public class SidecStarterControllerIntegrationTest {
             assertEquals(request.getSwitchType(), signal.getSwitchType());
             assertEquals(SignalStatus.STARTED, signal.getStatus());
         });
+    }
+
+    @Test
+    public void controller_failed_for_inconsistent_signal() throws Exception {
+        barrierService.setApplicationConnectionMode(ConnectionMode.SWITCH_TO_STANDIN);
+        var request2 = new SwitchoverRequest(
+                UUID.randomUUID(),
+                SignalMode.STANDIN,
+                "grebenyuk sergey",
+                "работы на сервере по миграции на новую версию pangolin",
+                SwitchType.CONSISTENT
+        );
+        String jsonRequest2 = OBJECT_MAPPER.writeValueAsString(request2);
+        mockMvc.perform(
+                        post(APP_SIGNAL_ENDPOINT)
+                                .contentType(MediaType.APPLICATION_JSON_VALUE)
+                                .content(jsonRequest2)
+                                .characterEncoding("UTF-8")
+                )
+                .andExpect(status().isBadRequest());
     }
 }
